Add Snake class

--- a/Let There Be Snake/Let There Be Snake.vcxproj
+++ b/Let There Be Snake/Let There Be Snake.vcxproj
@@ -151,9 +151,11 @@
   <ItemGroup>
     <ClCompile Include="board.cpp" />
     <ClCompile Include="let-there-be-snake.cpp" />
+    <ClCompile Include="snake.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
+    <ClInclude Include="snake.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
