--- a/Let There Be Snake/Let There Be Snake.vcxproj.filters
+++ b/Let There Be Snake/Let There Be Snake.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="board.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="snake.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="snake.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
