--- a/Let There Be Snake/Let There Be Snake.vcxproj
+++ b/Let There Be Snake/Let There Be Snake.vcxproj
@@ -152,10 +152,12 @@
     <ClCompile Include="board.cpp" />
     <ClCompile Include="let-there-be-snake.cpp" />
     <ClCompile Include="snake.cpp" />
+    <ClCompile Include="tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
     <ClInclude Include="snake.h" />
+    <ClInclude Include="tile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
