--- a/Let There Be Snake/Let There Be Snake.vcxproj
+++ b/Let There Be Snake/Let There Be Snake.vcxproj
@@ -149,12 +149,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Window.cpp" />
     <ClCompile Include="board.cpp" />
     <ClCompile Include="let-there-be-snake.cpp" />
     <ClCompile Include="snake.cpp" />
     <ClCompile Include="tile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Window.h" />
     <ClInclude Include="board.h" />
     <ClInclude Include="snake.h" />
     <ClInclude Include="tile.h" />
