--- a/Let There Be Snake/Let There Be Snake.vcxproj
+++ b/Let There Be Snake/Let There Be Snake.vcxproj
@@ -150,16 +150,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Window.cpp" />
-    <ClCompile Include="board.cpp" />
-    <ClCompile Include="let-there-be-snake.cpp" />
-    <ClCompile Include="snake.cpp" />
-    <ClCompile Include="tile.cpp" />
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Snake.cpp" />
+    <ClCompile Include="Tile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h" />
-    <ClInclude Include="board.h" />
-    <ClInclude Include="snake.h" />
-    <ClInclude Include="tile.h" />
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="Snake.h" />
+    <ClInclude Include="Tile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
