--- a/Let There Be Snake/Let There Be Snake.vcxproj
+++ b/Let There Be Snake/Let There Be Snake.vcxproj
@@ -149,17 +149,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="window.cpp" />
-    <ClCompile Include="board.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="snake.cpp" />
-    <ClCompile Include="tile.cpp" />
+    <ClCompile Include="src\window.cpp" />
+    <ClCompile Include="src\board.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\snake.cpp" />
+    <ClCompile Include="src\tile.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="window.h" />
-    <ClInclude Include="board.h" />
-    <ClInclude Include="snake.h" />
-    <ClInclude Include="tile.h" />
+    <ClInclude Include="src\window.h" />
+    <ClInclude Include="src\board.h" />
+    <ClInclude Include="src\snake.h" />
+    <ClInclude Include="src\tile.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
