--- a/Let There Be Snake.vcxproj
+++ b/Let There Be Snake.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\window.cpp" />
     <ClCompile Include="src\board.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="src\tile.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\game.h" />
     <ClInclude Include="src\window.h" />
     <ClInclude Include="src\board.h" />
     <ClInclude Include="src\snake.h" />
